Bug 52905 - REGRESSION(r73618): Clicking on a search input causes a crash.
Summary: REGRESSION(r73618): Clicking on a search input causes a crash.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other OS X 10.5
: P2 Normal
Assignee: Dimitri Glazkov (Google)
URL:
Keywords:
Depends on:
Blocks: 50184 52788
  Show dependency treegraph
 
Reported: 2011-01-21 10:46 PST by Dimitri Glazkov (Google)
Modified: 2011-01-21 11:20 PST (History)
1 user (show)

See Also:


Attachments
Patch (4.38 KB, patch)
2011-01-21 10:53 PST, Dimitri Glazkov (Google)
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dimitri Glazkov (Google) 2011-01-21 10:46:29 PST
REGRESSION(r73618): Clicking on a search input causes a crash.
Comment 1 Dimitri Glazkov (Google) 2011-01-21 10:53:45 PST
Created attachment 79760 [details]
Patch
Comment 2 Darin Adler 2011-01-21 11:18:31 PST
Comment on attachment 79760 [details]
Patch

OK. Seems fine for the short term.
Comment 3 Dimitri Glazkov (Google) 2011-01-21 11:20:14 PST
Comment on attachment 79760 [details]
Patch

Clearing flags on attachment: 79760

Committed r76366: <http://trac.webkit.org/changeset/76366>
Comment 4 Dimitri Glazkov (Google) 2011-01-21 11:20:18 PST
All reviewed patches have been landed.  Closing bug.